--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,9 +12,15 @@
   <script src="lib/jasmine-2.5.2/boot.js"></script>
 
   <!-- include source files here... -->
-  
+  <script src="src/Square.js"></script>
+  <script src="src/Board.js"></script>
+  <script src="src/Game.js"></script>
+
 
   <!-- include spec files here... -->
+  <script src="spec/SquareSpec.js"></script>
+  <script src="spec/BoardSpec.js"></script>
+  <script src="spec/GameSpec.js"></script>
 
 
 
